--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html>
+  <head>
+  </head>
+  
+  <body>
+    <h1> Hello World!</h1>
+    
+    <p> This is a paragraph </p>
+  </body>
+  
+</html>
 
